# RobotGL

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  compile.sh  opencode.json  pyproject.toml  requirements.txt  robot.py
.opencode/plans/: 001_init_project_structure.md  002_md_json_loader_robot_model.md  003_trajectory_planning.md  004_sim_loop.md  005_robot_interfaces.md  006_program_tree.md  007_scripting_api.md  008_frontend_pygame.md  009_main_app.md  010_integration.md
archive/: kinematics.py
archive/robot/: app.py  dual_arm_controller.py
deprecated/renderer/: mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.hpp
deprecated/renderer/opengl/: renderer.cpp
docs/: dh.txt  dh_raw.txt
firmware/: example.txt
firmware/kauda_firmware/: kauda_firmware.ino
firmware/shared/: serial_interface.h
include/: robot.h
marathon/include/: marathon.hpp
marathon/include/core/: backends.hpp  i_system.hpp  logger.hpp  module.hpp  node.hpp  object.hpp  resource.hpp  uuid.hpp
marathon/include/events/: event.hpp  events.hpp  i_event_system.hpp
marathon/include/events/sdl2/: events.hpp
marathon/include/graphics/: graphics.hpp
marathon/include/renderer/: camera.hpp  material.hpp  renderer.hpp
marathon/include/renderer/opengl/: renderer.hpp
marathon/include/runtime/: app.hpp
marathon/include/time/: i_time_system.hpp  time.hpp
marathon/include/window/: window.hpp
marathon/include/window/sdl2/: window.hpp
marathon/src/: backend_manager.cpp  backend_manager.hpp  marathon.cpp
marathon/src/core/: i_system.cpp  logger.cpp  module.cpp  node.cpp  object.cpp  resource.cpp
marathon/src/event/: events.cpp
marathon/src/events/: event.cpp  events.cpp  i_event_system.cpp  i_event_system.hpp
marathon/src/events/imgui_sdl2/: imgui_sdl2_event_system.cpp  imgui_sdl2_event_system.hpp
marathon/src/events/sdl2/: events.cpp  sdl2_event_system.cpp  sdl2_event_system.hpp
marathon/src/graphics/: graphics.cpp  i_graphics_system.cpp  i_graphics_system.hpp
marathon/src/graphics/opengl/: gl_graphics_system.cpp  gl_graphics_system.hpp
marathon/src/renderer/: material.cpp  renderer.cpp
marathon/src/renderer/opengl/: renderer.cpp
marathon/src/runtime/: app.cpp
marathon/src/time/: i_time_system.cpp  i_time_system.hpp  time.cpp  time_system.cpp  time_system.hpp
marathon/src/time/chrono/: time_system.cpp  time_system.hpp
marathon/src/window/: i_window_system.cpp  i_window_system.hpp  window.cpp
marathon/src/window/imgui_sdl2/: imgui_sdl2_window_system.cpp  imgui_sdl2_window_system.hpp
marathon/src/window/sdl2/: sdl2_window_system.cpp  sdl2_window_system.hpp  window.cpp
python/: app.py  dual_arm_controller.py  requirements.txt
python/robot/: visualiser.py
robot/: arm_controller.py
src/: example.cpp  main.cpp
src/robotgl/: __init__.py  main.py
src/robotgl/engine/: __init__.py  dh_loader.py  program_tree.py  robot_model.py  scripting_api.py  sim_loop.py  trajectory.py
src/robotgl/frontend/: __init__.py  app.py  renderer.py
src/robotgl/robot_interfaces/: __init__.py  base.py  serial_interface.py  tcp_interface.py
src/robotgl/robot_interfaces/custom/: __init__.py
test/: main.cpp
tests/: test_main.py
tests/test_data/: 2dof_md.json
tests/test_engine/: test_program_tree.py  test_robot_model.py  test_scripting_api.py  test_sim_loop.py  test_trajectory.py
tests/test_robot_interfaces/: test_base.py
tools/arduino/kauda/: kauda.ino
tools/arduino/kauda_firmware/: kauda_firmware.ino
tools/python/: .dockerignore  Dockerfile  requirements.txt  robot.py
tools/python/app/: kinematics.py
tools/v1/arduino/servo_test/: servo_test.ino
tools/v2/firmware/: example.txt
tools/v2/firmware/arduino_base/: arduino_base.ino
tools/v2/firmware/arduino_forearm/: arduino_forearm.ino
tools/v2/firmware/shared/: pose.h  robot_controller_base.h  serial_interface.h
tools/v2/firmware/test_serial_interface/: test_serial_interface.ino
tools/v2/python/: build_run.sh  dh_raw.txt  requirements.txt
tools/v2/python/app/: app.py  arm_controller.py  dual_arm_controller.py  robot.py  visualiser.py
